Add calls to mpi library